maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:7: error: value ==- is not a member of Int
    if (somAng==4||somAng==-4){
                         ^Escaper:27: error: object java.lang.String is not a value
  var g=String =er
        ^